tests/fixtures/errors/comparison_literal_width.z
# comparisons are standard binops: a leading bare literal resolves i64
# and a wider typed operand is a type error, same as arithmetic

main: function is {
    big: 9223372036854775807.i64
    if 5 < big.i128 then print "unreachable"
}
